cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

/* Opaque handle types */
typedef struct MLIRContext_* MLIRContextHandle;
typedef struct MLIRModule_* MLIRModuleHandle;
typedef struct MLIRFunction_* MLIRFunctionHandle;
typedef struct MLIRValue_* MLIRValueHandle;
typedef struct MLIRType_* MLIRTypeHandle;
/* Result codes */
typedef enum {
    MLIR_SUCCESS = 0,
    MLIR_ERROR_INVALID_PARAMETER = 1,
    MLIR_ERROR_VERIFICATION_FAILED = 2,
    MLIR_ERROR_FILE_IO = 3,
    MLIR_ERROR_INTERNAL = 4
} MLIRResultCode;
/* Context management */
MLIRContextHandle mlir_context_create(void);
void mlir_context_destroy(MLIRContextHandle context);
/* Module management */
MLIRModuleHandle mlir_module_create(MLIRContextHandle context);
void mlir_module_destroy(MLIRModuleHandle module);