cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java

     */
    public static final OfShort int16_t = mlir_tosa_c_api_h.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __int32_t int32_t
     * }
     */
    public static final OfInt int32_t = mlir_tosa_c_api_h.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int64_t int64_t
     * }
     */
    public static final OfLong int64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uint8_t uint8_t
     * }
     */
    public static final OfByte uint8_t = mlir_tosa_c_api_h.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __uint16_t uint16_t
     * }
     */
    public static final OfShort uint16_t = mlir_tosa_c_api_h.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __uint32_t uint32_t
     * }
     */
    public static final OfInt uint32_t = mlir_tosa_c_api_h.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __uint64_t uint64_t
     * }
     */
    public static final OfLong uint64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __int_least8_t int_least8_t
     * }
     */
    public static final OfByte int_least8_t = mlir_tosa_c_api_h.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __int_least16_t int_least16_t
     * }
     */
    public static final OfShort int_least16_t = mlir_tosa_c_api_h.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __int_least32_t int_least32_t
     * }
     */
    public static final OfInt int_least32_t = mlir_tosa_c_api_h.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int_least64_t int_least64_t
     * }
     */
    public static final OfLong int_least64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uint_least8_t uint_least8_t
     * }
     */
    public static final OfByte uint_least8_t = mlir_tosa_c_api_h.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __uint_least16_t uint_least16_t
     * }
     */
    public static final OfShort uint_least16_t = mlir_tosa_c_api_h.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least32_t uint_least32_t
     * }
     */
    public static final OfInt uint_least32_t = mlir_tosa_c_api_h.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least64_t uint_least64_t
     * }
     */
    public static final OfLong uint_least64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef signed char int_fast8_t
     * }
     */
    public static final OfByte int_fast8_t = mlir_tosa_c_api_h.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef long int_fast16_t
     * }
     */
    public static final OfLong int_fast16_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast32_t
     * }
     */
    public static final OfLong int_fast32_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast64_t
     * }
     */
    public static final OfLong int_fast64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned char uint_fast8_t
     * }
     */
    public static final OfByte uint_fast8_t = mlir_tosa_c_api_h.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast16_t
     * }
     */
    public static final OfLong uint_fast16_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast32_t
     * }
     */
    public static final OfLong uint_fast32_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast64_t
     * }
     */
    public static final OfLong uint_fast64_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long intptr_t
     * }
     */
    public static final OfLong intptr_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uintptr_t
     * }
     */
    public static final OfLong uintptr_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __intmax_t intmax_t
     * }
     */
    public static final OfLong intmax_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uintmax_t uintmax_t
     * }
     */
    public static final OfLong uintmax_t = mlir_tosa_c_api_h.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef struct MLIRContext_ *MLIRContextHandle
     * }
     */
    public static final AddressLayout MLIRContextHandle = mlir_tosa_c_api_h.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef struct MLIRModule_ *MLIRModuleHandle
     * }
     */
    public static final AddressLayout MLIRModuleHandle = mlir_tosa_c_api_h.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef struct MLIRFunction_ *MLIRFunctionHandle
     * }
     */
    public static final AddressLayout MLIRFunctionHandle = mlir_tosa_c_api_h.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef struct MLIRValue_ *MLIRValueHandle
     * }
     */
    public static final AddressLayout MLIRValueHandle = mlir_tosa_c_api_h.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef struct MLIRType_ *MLIRTypeHandle
     * }
     */
    public static final AddressLayout MLIRTypeHandle = mlir_tosa_c_api_h.C_POINTER;
    private static final int MLIR_SUCCESS = (int)0L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.MLIR_SUCCESS = 0
     * }
     */
    public static int MLIR_SUCCESS() {
        return MLIR_SUCCESS;
    }
    private static final int MLIR_ERROR_INVALID_PARAMETER = (int)1L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.MLIR_ERROR_INVALID_PARAMETER = 1
     * }
     */
    public static int MLIR_ERROR_INVALID_PARAMETER() {
        return MLIR_ERROR_INVALID_PARAMETER;
    }
    private static final int MLIR_ERROR_VERIFICATION_FAILED = (int)2L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.MLIR_ERROR_VERIFICATION_FAILED = 2
     * }
     */
    public static int MLIR_ERROR_VERIFICATION_FAILED() {
        return MLIR_ERROR_VERIFICATION_FAILED;
    }
    private static final int MLIR_ERROR_FILE_IO = (int)3L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.MLIR_ERROR_FILE_IO = 3
     * }
     */
    public static int MLIR_ERROR_FILE_IO() {
        return MLIR_ERROR_FILE_IO;
    }
    private static final int MLIR_ERROR_INTERNAL = (int)4L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.MLIR_ERROR_INTERNAL = 4
     * }
     */
    public static int MLIR_ERROR_INTERNAL() {
        return MLIR_ERROR_INTERNAL;
    }

    private static class mlir_context_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_context_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRContextHandle mlir_context_create()
     * }
     */
    public static FunctionDescriptor mlir_context_create$descriptor() {
        return mlir_context_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRContextHandle mlir_context_create()
     * }
     */
    public static MethodHandle mlir_context_create$handle() {
        return mlir_context_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRContextHandle mlir_context_create()
     * }
     */
    public static MemorySegment mlir_context_create$address() {
        return mlir_context_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRContextHandle mlir_context_create()
     * }
     */
    public static MemorySegment mlir_context_create() {
        var mh$ = mlir_context_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_context_create");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_context_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_context_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_context_destroy(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_context_destroy$descriptor() {
        return mlir_context_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_context_destroy(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_context_destroy$handle() {
        return mlir_context_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_context_destroy(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_context_destroy$address() {
        return mlir_context_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mlir_context_destroy(MLIRContextHandle context)
     * }
     */
    public static void mlir_context_destroy(MemorySegment context) {
        var mh$ = mlir_context_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_context_destroy", context);
            }
            mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRModuleHandle mlir_module_create(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_module_create$descriptor() {
        return mlir_module_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRModuleHandle mlir_module_create(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_module_create$handle() {
        return mlir_module_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRModuleHandle mlir_module_create(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_module_create$address() {
        return mlir_module_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRModuleHandle mlir_module_create(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_module_create(MemorySegment context) {
        var mh$ = mlir_module_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_create", context);
            }
            return (MemorySegment)mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_destroy");
